--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 #
 ####### requirements.txt #######
 #
-###### Requirements without Version Specifiers ######
-numpy
-matplotlib
+numpy~=1.18.2
+matplotlib~=3.2.1
+pandas~=1.0.5
